src/objects/Metric_Target_Goal__c.object
<CustomObject>
    <description>This object represents a target goal for a metric</description>
    <fields>
        <fullName>Annual_Target__c</fullName>
        <label>Annual Target</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Target__c</fullName>
        <label>Daily Target</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effective_From__c</fullName>
        <label>Effective From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_To__c</fullName>
        <label>Effective To</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Metric__c</fullName>
        <label>Metric</label>
        <referenceTo>Metric__c</referenceTo>
        <relationshipLabel>Metric Target Goals</relationshipLabel>
        <relationshipName>Metric_Target_Goals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Monthly_Target__c</fullName>
        <label>Monthly Target</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weekly_Target__c</fullName>
        <label>Weekly Target</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>Metric Target Goal</label>
    <nameField>
        <label>Metric Target Goal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metric Target Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>